# VKSPT

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
assets/: SceneConfig-assignment-our-ok.xml  SceneConfig-assignment-our-sim-wrong.xml  SceneConfig-fullres.xml  SceneConfig-v2-small.xml  SceneConfig-v2-spheresduck.xml  SceneConfig-v2.xml  SceneConfig.xml
docs/: EdgeDetection.md  RT_Pipeline_Migration_Problems.md  RT_Pipeline_Migration_Problems_answer.md  Spectral Caustic Photon Mapping 集成计划.md  SpectralColorConversion.md  SpectralDispersionDesign.md  SplitMethodDesign.md  UserGuide.md  bug-report-half-struct-crash.md  lost_and_found.md  项目开发记录文档.md  项目设计文档：自适应光谱追踪渲染器.md
shaders/: denoise.slang  normalize.comp  raytrace.comp  raytrace.slang  raytrace_classify.comp  raytrace_pipeline.slang  raytrace_process.comp  raytrace_sort.comp  spectral_common.slang  stats_overlay.slang
shaders/common/: bindings.glslh  bindings.slang  cmf_data.glslh  cmf_data.slang  hash_utils.slang  push_constants.glslh  types.glslh  types.slang
shaders/geometry/: dispersion.glslh  dispersion.slang  normals.glslh  normals.slang
shaders/lighting/: direct_lighting.glslh
shaders/materials/: checkerboard.glslh  checkerboard.slang  dielectric.glslh  dielectric.slang  direct_lighting.slang  dispatch.glslh  lambertian.glslh  lambertian.slang  metal.glslh  metal.slang  sky.glslh  sky_handler.slang
shaders/math/: absorption.glslh  absorption.slang  color.glslh  color.slang  legendre_decay.glslh  legendre_decay.slang  sampling.glslh  sampling.slang  spectral_math.glslh  spectral_math.slang
shaders/photon/: blend_photon.slang  hash_aggregate.slang  hash_count.slang  hash_gather.slang  hash_scan.slang  hash_scatter.slang  photon_gather.slang  photon_hit.slang  photon_light.slang
shaders/rt/: direct_light.slang  material_handlers.slang  payload.slang  sky.slang
src/: AccelerationStructure.cpp  AccelerationStructure.h  Application.cpp  Application.h  GPUBuffer.cpp  GPUBuffer.h  RaySorter.cpp  RaySorter.h  RayTracingPipeline.cpp  RayTracingPipeline.h  Renderer.cpp  Renderer.h  SceneConfig.cpp  SceneConfig.h  VulkanContext.cpp  Window.cpp  Window.h  main.cpp
src/app/: Application.cpp  Application.h  SceneBuilder.cpp  SceneBuilder.h  main.cpp
src/core/: GPUBuffer.cpp  GPUBuffer.h  Log.h  Spectral.h  VulkanContext.cpp  VulkanContext.h  VulkanDeviceSetup.cpp  VulkanDeviceSetup.h  Window.cpp  Window.h
src/ray/: AccelBuilder.cpp  AccelBuilder.h  AccelerationStructure.cpp  AccelerationStructure.h  DescriptorManager.cpp  DescriptorManager.h  EnvMap.cpp  EnvMap.h  GeometryBuffer.cpp  GeometryBuffer.h  RaySorter.cpp  RaySorter.h  RayTracingPipeline.cpp  RayTracingPipeline.h
src/render/: CameraParams.h  CaptureImageIO.cpp  CaptureImageIO.h  CrossFrameAccum.cpp  CrossFrameAccum.h  Denoiser.cpp  Denoiser.h  FrameCapture.cpp  FrameCapture.h  FramePresent.cpp  FramePresent.h  FrameRecorder.cpp  FrameRecorder.h  OutputImage.cpp  OutputImage.h  PhotonHashStages.cpp  PhotonHashStages.h  PhotonRecorder.cpp  PhotonRecorder.h  Renderer.cpp  Renderer.h  ScreenshotCapture.cpp  ScreenshotCapture.h  SwapchainManager.cpp  SwapchainManager.h
src/scene/: ObjLoader.cpp  ObjLoader.h  SceneConfig.cpp  SceneConfig.h  SceneXmlParser.cpp  SceneXmlParser.h
tools/: append_log.ps1  precompute_cie_data.py
